fixed select box arrow spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#selectCountry{
+    border-right: 1rem solid transparent;
+}
